# rust-training

./: Cargo.toml  books.txt  exercises.md  notes.md  operations.txt  rust_macros_tutorial.md  rustfmt.toml  rusty_budget  rusty_budget.txt  smart_pointers.md  traits.md
link_shortener/: .env  .gitignore  Cargo.toml  Dockerfile  build.sh  client.http  docker-compose.yml  rustfmt.toml
link_shortener/common/: Cargo.toml
link_shortener/common/src/: generators.rs  id.rs  lib.rs  pagination.rs
link_shortener/link_shortener/: Cargo.toml
link_shortener/link_shortener/src/: lib.rs
link_shortener/migrations/: 20241124184726_link_shortener.down.sql  20241124184726_link_shortener.up.sql
link_shortener/src/: main.rs  persistence.rs  responses.rs  rest.rs
proc_macros/: Cargo.toml
proc_macros/src/: greet.rs  lib.rs  private.rs  public.rs
src/: 01_basics.rs  03_ownership.rs  03_structs.rs  04_enum.rs  05_collections.rs  05_enum.rs  06_collections.rs  06_guess_game.rs  07_generics_and_traits.rs  08_lifetimes.rs  09_basic-io.rs  10_threads.rs  11_async.rs  async_functions.rs  balance.rs  basic_io.rs  cat.rs  collections_generics_traits.rs  echo.rs  exercises.rs  fibonacci.rs  grep.rs  grep_classic.rs  integration.rs  language_basics.rs  lib.rs  main.rs  memory_management.rs  mod_001a_comments_variables_mutability_scope_shadowing.rs  mod_001b_constants_statics.rs  mod_002_data_types.rs  mod_003_operators.rs  mod_004_functions_and_control_flow.rs  mod_005_text_formatting_and_compiler_directives.rs  mod_006_ownership_and_lifetimes.rs  mod_007_structs_enums_and_collections.rs  mod_008_generics_and_traits.rs  mod_009_error_handling.rs  mod_010_text_processing_file_system_and_env.rs  mod_011_access_control_and_code_organization.rs  (+10 more)
src/exercises/: basic_io.rs  budget.rs  cat.rs  db.rs  echo.rs  employees.rs  fibonacci.rs  find.rs  grep.rs  grep_classic.rs  (+10 more)
tests/: operators_test.rs  wrappers_test.rs
todo-actix/: Cargo.toml  client.http
todos-rocket/: Cargo.toml  client.http
todos-rocket/src/: data.rs  handlers.rs  main.rs
(+4 files in other folders)
