[package]
name = "rust_training"
version = "0.1.0"
edition = "2021"

#[lib]
#crate-type = ["cdylib"]

[dependencies]
once_cell = "1.19.0"
chrono = "0.4.38"
walkdir = "2.5.0"
regex = "1.11.0"
rand = "0.9.0-alpha.2"
futures = "0.3.30"
reqwest = "0.12.4"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }