[package]
name = "rust_training"
version = "0.1.0"
edition = "2021"

#[lib]
#crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.39"
once_cell = "1.20.2"
rand = "0.8.5"
walkdir = "2.5.0"
regex = "1.11.1"
reqwest = "0.12.9"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }