[package]
name = "shortener"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["common", "link_shortener"]

[dependencies]
common = { path = "common" }
link_shortener = { path = "link_shortener" }
dotenvy = "0.15.7"
tokio = { version = "1.42.0", features = ["rt-multi-thread"]}
tokio-cron-scheduler = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["query"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors", "compression-gzip"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
url = { version = "2.5.4" , features = ["serde"]}
serde = { version = "1.0.216", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
