[package]
name = "todos-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
uuid = { version = "1.3.4", features = ["v4"] }
